Fix linked inline code block being unreadable
- Removed underline, added color
- Fixed index.html broken formatting

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -118,6 +118,14 @@ code {
   font-style: normal !important;
 }
 
+.no-underline {
+  text-decoration: none;
+}
+
+a > code {
+  color: #90bcff;
+}
+
 code {
   border: 1px solid rgb(150, 150, 150);
   border-radius: 3px;
